@@ -37,15 +37,6 @@ public class BoundingBox implements Serializable {
 	private final Vector3 cnt = new Vector3();
 	private final Vector3 dim = new Vector3();
 
-	@Deprecated private Vector3[] corners;
-
-	/** @deprecated Use {@link #getCenter(Vector3)}
-	 * @return the center of the bounding box */
-	@Deprecated
-	public Vector3 getCenter () {
-		return cnt;
-	}
-
 	/** @param out The {@link Vector3} to receive the center of the bounding box.
 	 * @return The vector specified with the out argument. */
 	public Vector3 getCenter (Vector3 out) {
@@ -62,30 +53,6 @@ public class BoundingBox implements Serializable {
 
 	public float getCenterZ () {
 		return cnt.z;
-	}
-
-	@Deprecated
-	protected void updateCorners () {
-	}
-
-	/** @deprecated Use the getCornerXYZ methods instead
-	 * @return the corners of this bounding box */
-	@Deprecated
-	public Vector3[] getCorners () {
-		if (corners == null) {
-			corners = new Vector3[8];
-			for (int i = 0; i < 8; i++)
-				corners[i] = new Vector3();
-		}
-		corners[0].set(min.x, min.y, min.z);
-		corners[1].set(max.x, min.y, min.z);
-		corners[2].set(max.x, max.y, min.z);
-		corners[3].set(min.x, max.y, min.z);
-		corners[4].set(min.x, min.y, max.z);
-		corners[5].set(max.x, min.y, max.z);
-		corners[6].set(max.x, max.y, max.z);
-		corners[7].set(min.x, max.y, max.z);
-		return corners;
 	}
 
 	public Vector3 getCorner000 (final Vector3 out) {
@@ -120,13 +87,6 @@ public class BoundingBox implements Serializable {
 		return out.set(max.x, max.y, max.z);
 	}
 
-	/** @deprecated Use {@link #getDimensions(Vector3)} instead
-	 * @return The dimensions of this bounding box on all three axis */
-	@Deprecated
-	public Vector3 getDimensions () {
-		return dim;
-	}
-
 	/** @param out The {@link Vector3} to receive the dimensions of this bounding box on all three axis.
 	 * @return The vector specified with the out argument */
 	public Vector3 getDimensions (final Vector3 out) {
@@ -145,24 +105,10 @@ public class BoundingBox implements Serializable {
 		return dim.z;
 	}
 
-	/** @deprecated Use {@link #getMin(Vector3)} instead.
-	 * @return The minimum vector */
-	@Deprecated
-	public Vector3 getMin () {
-		return min;
-	}
-
 	/** @param out The {@link Vector3} to receive the minimum values.
 	 * @return The vector specified with the out argument */
 	public Vector3 getMin (final Vector3 out) {
 		return out.set(min);
-	}
-
-	/** @deprecated Use {@link #getMax(Vector3)} instead
-	 * @return The maximum vector */
-	@Deprecated
-	public Vector3 getMax () {
-		return max;
 	}
 
 	/** @param out The {@link Vector3} to receive the maximum values.
