@@ -43,6 +43,7 @@ public class SpriteDrawable extends BaseDrawable implements TransformDrawable {
 		draw(batch, x, y, width / 2f, height / 2f, width, height, 1f, 1f, 0f);
 	}
 
+	private static Color tmpColor = new Color();
 	public void draw (Batch batch, float x, float y, float originX, float originY, float width, float height, float scaleX,
 		float scaleY, float rotation) {
 		sprite.setOrigin(originX, originY);
@@ -50,7 +51,7 @@ public class SpriteDrawable extends BaseDrawable implements TransformDrawable {
 		sprite.setScale(scaleX, scaleY);
 		sprite.setBounds(x, y, width, height);
 		Color color = sprite.getColor();
-		sprite.setColor(Color.tmp.set(color).mul(batch.getColor()));
+		sprite.setColor(tmpColor.set(color).mul(batch.getColor()));
 		sprite.draw(batch);
 		sprite.setColor(color);
 	}
